app/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: django-app
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      nodeSelector:
        kubernetes.io/hostname: kube-node001
      containers:
        - name: django
          image: sjm31566/djangoapp:latest
          ports:
            - containerPort: 8000
