app/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: django-app
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
